EARTH-297: Small alignment fix to mosaic.

--- a/css/components/components.css
+++ b/css/components/components.css
@@ -2457,10 +2457,12 @@
 .photo-mosaic--thumbs-down-alt {
   margin-top: -40px; }
 
-.photo-mosaic--thumbs-down-quote {
-  margin: 73px 20px 0 -20px; }
-  .photo-mosaic--thumbs-down-quote .photo-tiles__quote {
-    margin: 0 -220px 0 -23px; }
+@media only screen and (min-width: 768px) {
+  .photo-mosaic--thumbs-down-quote {
+    margin: 73px 20px 0 -20px; } }
+
+.photo-mosaic--thumbs-down-quote .photo-tiles__quote {
+  margin: 0 -220px 0 -23px; }
 
 .block--lockup__site-name-and-slogan, .block--lockup__site-slogan {
   border: 0;
